--- a/details2.html
+++ b/details2.html
@@ -9,15 +9,18 @@
     <meta name="author" content="">
     <title>SB Admin - Bootstrap Admin Template</title>
     <!-- Bootstrap Core CSS -->
-    <link href="../css-based-on-template/bootstrap.min.css" rel="stylesheet">
+    <link href="css-based-on-template/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
-    <link href="../css-based-on-template/sb-admin.css" rel="stylesheet">
-    <link href="../css-based-on-template/index/index.css" rel="stylesheet">
+    <link href="css-based-on-template/sb-admin.css" rel="stylesheet">
+    <link href="css-based-on-template/details/details.css" rel="stylesheet">
     <!-- Custom Fonts -->
-    <link href="../font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <script src="//cdn.auth0.com/js/lock/10.3.0/lock.min.js"></script>
-    <script src="auth0-variables.js"></script>
-    <script src="app.js"></script>
+    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
 </head>
 
 <body>
@@ -100,12 +103,7 @@
                         <li> <a href="#"><i class="fa fa-fw fa-power-off"></i> Log Out</a> </li>
                     </ul>
                 </li>
-                <li> </li>
-            </ul> 
-            <img alt="avatar" id="avatar" style="display:none;">
-            <p>Welcome <span id="nickname"></span></p>
-            <button type="submit" id="btn-login">Sign In</button>
-            <button type="submit" id="btn-logout" style="display:none;">Sign Out</button>
+            </ul>
             <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
@@ -127,87 +125,115 @@
             </div>
             <!-- /.navbar-collapse -->
         </nav>
+        <!-- Comienzo del contenido -->
         <div id="page-wrapper">
             <div class="container-fluid">
-                <div class="jumbotron">
-                    <h1>Hello, world!</h1> <img class="img-responsive" src="../img/vinetas/imgres.jpg">
-                    <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-                    <p> </p>
-                    <div id="social" class="row">
-                        <hr>
-                        <button type="button" class="btn btn-warning btn-circle btn-lg"><span class="fa fa-star" aria-hidden="true"></span></button>
-                        <button type="button" class="btn btn-success btn-circle btn-lg"><i class="fa fa-thumbs-up"></i>
-                            <div class="badge">30</div>
-                        </button>
-                        <button type="button" class="btn btn-danger btn-circle btn-lg"><i class="fa fa-thumbs-down"></i>
-                            <div class="badge">5</div>
-                        </button>
-                        <br>
-                        <br> </div>
+                <!-- Page Heading -->
+                <div class="row">
+                    <div class="col-lg-12">
+                        <h1 class="page-header">
+                            Detalles de la viñeta
+                        </h1> </div>
                 </div>
-                <div class="jumbotron">
-                    <h1>Hello, world!</h1> <img class="img-responsive" src="../img/vinetas/vineta1.jpg">
-                    <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-                    <p> </p>
-                    <div id="social" class="row">
-                        <hr>
-                        <button type="button" class="btn btn-warning btn-circle btn-lg"><span class="fa fa-star" aria-hidden="true"></span></button>
-                        <button type="button" class="btn btn-success btn-circle btn-lg"><i class="fa fa-thumbs-up"></i>
-                            <div class="badge">30</div>
-                        </button>
-                        <button type="button" class="btn btn-danger btn-circle btn-lg"><i class="fa fa-thumbs-down"></i>
-                            <div class="badge">5</div>
-                        </button>
-                        <br>
-                        <br> </div>
-                </div>
-                <div class="jumbotron">
-                    <h1>Hello, world!</h1> <img class="img-responsive" src="../img/vinetas/vineta2.jpg">
-                    <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-                    <p> </p>
-                    <div id="social" class="row">
-                        <hr>
-                        <button type="button" class="btn btn-warning btn-circle btn-lg"><span class="fa fa-star" aria-hidden="true"></span></button>
-                        <button type="button" class="btn btn-success btn-circle btn-lg"><i class="fa fa-thumbs-up"></i>
-                            <div class="badge">30</div>
-                        </button>
-                        <button type="button" class="btn btn-danger btn-circle btn-lg"><i class="fa fa-thumbs-down"></i>
-                            <div class="badge">5</div>
-                        </button>
-                        <br>
-                        <br> </div>
-                </div>
-                <div class="jumbotron">
-                    <h1>Hello, world!</h1> <img class="img-responsive" src="../img/vinetas/vineta3.jpg">
-                    <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-                    <p> </p>
-                    <div id="social" class="row">
-                        <hr>
-                        <button type="button" class="btn btn-warning btn-circle btn-lg"><span class="fa fa-star" aria-hidden="true"></span></button>
-                        <button type="button" class="btn btn-success btn-circle btn-lg"><i class="fa fa-thumbs-up"></i>
-                            <div class="badge">30</div>
-                        </button>
-                        <button type="button" class="btn btn-danger btn-circle btn-lg"><i class="fa fa-thumbs-down"></i>
-                            <div class="badge">5</div>
-                        </button>
-                        <br>
-                        <br> </div>
-                </div>
-                <div class="jumbotron">
-                    <h1>Hello, world!</h1> <img class="img-responsive" src="../img/vinetas/vineta4.jpg">
-                    <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-                    <p> </p>
-                    <div id="social" class="row">
-                        <hr>
-                        <button type="button" class="btn btn-warning btn-circle btn-lg"><span class="fa fa-star" aria-hidden="true"></span></button>
-                        <button type="button" class="btn btn-success btn-circle btn-lg"><i class="fa fa-thumbs-up"></i>
-                            <div class="badge">30</div>
-                        </button>
-                        <button type="button" class="btn btn-danger btn-circle btn-lg"><i class="fa fa-thumbs-down"></i>
-                            <div class="badge">5</div>
-                        </button>
-                        <br>
-                        <br> </div>
+                <!-- /.row1 -->
+                <div class="row">
+                    <div id="pozo" class="well clearfix">
+                        <div class="container-fluid">
+                            <div id="meme" class="row">
+                                <div class="col-md-10">
+                                    <div class="card"> <img class="card-img-top img-rounded img-responsive" src="http://i2.kym-cdn.com/photos/images/facebook/000/226/471/cf9.png" alt="kek">
+                                        <div class="card-block text-center">
+                                            <h2>Mira este meme</h2>
+                                            <p class="card-text text-center">Este es un texto de relleno para que se pueda ver como se comporta el estilo de la tarjeta.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-2">
+                                    <legend>Autor</legend>
+                                    <div class="container-fluid">
+                                        <div class="row">
+                                            <div class="col-md-2">
+                                                <button class="btn autor">
+                                                    <div id="autor" class="card text-center"> <img id="avatarAutor" class="card-img-top img-responsive img-center" src="https://pbs.twimg.com/profile_images/648889317503336449/MU7PrqD_.jpg">
+                                                        <div class="card-block">
+                                                            <h3 class="card-title">Usuario</h3> </div>
+                                                    </div>
+                                                </button>
+                                            </div>
+                                            <div class="col-md-8"> </div>
+                                        </div>
+                                    </div>
+                                    <!-- /container -->
+                                </div>
+                            </div>
+                            <div id="social" class="row">
+                                <div class="col-md-10">
+                                    <hr>
+                                    <div id="icons-social">
+                                        <button type="button" class="btn btn-warning btn-circle btn-xl"><span class="fa fa-star" aria-hidden="true"></span></button>
+                                        <button type="button" class="btn btn-success btn-circle btn-xl"><i class="fa fa-thumbs-up"></i>
+                                            <div class="badge">30</div>
+                                        </button>
+                                        <button type="button" class="btn btn-danger btn-circle btn-xl"><i class="fa fa-thumbs-down"></i>
+                                            <div class="badge">5</div>
+                                        </button>
+                                        <br>
+                                        <br> </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <legend>Comentar</legend>
+                                <!-- Añadir comentario -->
+                                <div class="input-group">
+                                    <input class="form-control" placeholder="¿Qué tienes que decir?" type="text"> <span class="input-group-addon">
+                                        <button type="submit"><i class="glyphicon glyphicon-pencil"></i> Enviar</button>
+                                    </span> </div>
+                                <br> </div>
+                            <div id="comentarios" class="row">
+                                <legend>Comentarios
+                                    <div class="badge">2</div>
+                                </legend>
+                                <ul class="ListaComentatios">
+                                    <li>
+                                        <div id="comentario" class="contauner-fluid">
+                                            <div class="row">
+                                                <div class="col-md-1">
+                                                    <a href="#"> <img class="avatar" src="http://i2.kym-cdn.com/photos/images/facebook/000/926/994/729.gif" height="65px" width="65px"> </a>
+                                                </div>
+                                                <div class="col-md-11">
+                                                    <div class="well ComentarioTexto"> pole </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div id="comentario" class="contauner-fluid">
+                                            <div class="row">
+                                                <div class="col-md-1">
+                                                    <a href="#"> <img class="avatar" src="https://lh3.googleusercontent.com/BzPqjhKpLNjaaRMaaFKUkzjg07tvd0YzF_GZwpIazf3b6EnMrGI4ug56VPFkTDJWxC3g" height="65px" width="65px"> </a>
+                                                </div>
+                                                <div class="col-md-11">
+                                                    <div class="well ComentarioTexto"> 10/10 me encanta </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div id="comentario" class="contauner-fluid">
+                                            <div class="row">
+                                                <div class="col-md-1">
+                                                    <a href="#"> <img class="avatar" src="https://i1.sndcdn.com/avatars-000182086510-rn5fm8-t500x500.jpg" height="65px" width="65px"> </a>
+                                                </div>
+                                                <div class="col-md-11">
+                                                    <div class="well ComentarioTexto"> Es ofensivamente bueno, sigue así. </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <!-- /.container-fluid -->
