--- a/details2.html
+++ b/details2.html
@@ -33,28 +33,24 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button> <a class="navbar-brand" href="index.html">¡CuantoMeme!</a> </div>
             <!-- Top Menu Items -->
             <ul class="nav navbar-right top-nav">
-                <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> John Smith <b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        <li><img class="img-responsive avatarUsuario" src="img/Usuarios/1472456472557.png"></li>
-                        <li> <a href="#"><i class="fa fa-fw fa-user"></i> Profile</a> </li>
-                        <li> <a href="#"><i class="fa fa-fw fa-envelope"></i> Inbox</a> </li>
-                        <li> <a href="#"><i class="fa fa-fw fa-gear"></i> Settings</a> </li>
-                        <li class="divider"></li>
-                        <li> <a href="#"><i class="fa fa-fw fa-power-off"></i> Log Out</a> </li>
-                    </ul>
-                </li>
+                <li> <a id="btn-login" class="btn btn-sm btn-primary"><span class="fa fa-user fa-1x"></span> Identificate</a> </li>
             </ul>
             <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
-                    <li> <a href="index.html"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a> </li>
-                    <li> <a href="charts.html"><i class="fa fa-fw fa-bar-chart-o"></i> Charts</a> </li>
-                    <li> <a href="tables.html"><i class="fa fa-fw fa-table"></i> Tables</a> </li>
-                    <li> <a href="forms.html"><i class="fa fa-fw fa-edit"></i> Forms</a> </li>
-                    <li> <a href="bootstrap-elements.html"><i class="fa fa-fw fa-desktop"></i> Bootstrap Elements</a> </li>
-                    <li> <a href="bootstrap-grid.html"><i class="fa fa-fw fa-wrench"></i> Bootstrap Grid</a> </li>
-                    <li class="active"> <a href="blank-page.html"><i class="fa fa-fw fa-file"></i> Blank Page</a> </li>
-                    <li> <a href="index-rtl.html"><i class="fa fa-fw fa-dashboard"></i> RTL Dashboard</a> </li>
+                    <li> <a href="index.html"><i class="fa fa-home" aria-hidden="true"></i> Inicio</a> </li>
+                    <li> <a href="javascript:;" data-toggle="collapse" data-target="#demo"><i class="fa fa-bars fa-1x" aria-hidden="true"></i> Categorias <i class="fa fa-fw fa-caret-down"></i></a>
+                        <ul id="demo" class="collapse">
+                            <li> <a href="pepe.html">Pepe</a> </li>
+                            <li> <a href="#">Inglip</a> </li>
+                            <li> <a href="#">Yaoming</a> </li>
+                            <li> <a href="#">Es gratis</a> </li>
+                            <li> <a href="#">LOL</a> </li>
+                            <li> <a href="#">Feels</a> </li>
+                            <li> <a href="#">Feels bad man</a> </li>
+                            <li> <a href="#">Feels good man</a> </li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
