--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                     <div id="social" class="row">
                         <hr>
                         <button type="button" class="btn btn-warning btn-circle btn-lg"><span class="fa fa-star" aria-hidden="true"></span></button>
+                        <a href="details2.html"><button type="button" class="btn btn-info btn-circle btn-lg"><i class="fa fa-comments"></i> <span class="badge">3</span></button></a>
                         <button type="button" class="btn btn-success btn-circle btn-lg"><i class="fa fa-thumbs-up"></i>
                             <div class="badge">30</div>
                         </button>
@@ -77,10 +78,11 @@
                     <h1>Hello, world!</h1> <img class="img-responsive" src="../img/vinetas/vineta1.jpg">
                     <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
                     <p> </p>
-                    <div id="categoria" class=""><small>Categoria: <a href="#">LOL</a></small></div>
+                    <div id="categoria" class=""><small>Categoria: <a href="#">LOL</a> / <a href="details2.html">Detalles</a></small></div>
                     <div id="social" class="row">
                         <hr>
                         <button type="button" class="btn btn-warning btn-circle btn-lg"><span class="fa fa-star" aria-hidden="true"></span></button>
+                        <a href="details2.html"><button type="button" class="btn btn-info btn-circle btn-lg"><i class="fa fa-comments"></i> <span class="badge">3</span></button></a>
                         <button type="button" class="btn btn-success btn-circle btn-lg"><i class="fa fa-thumbs-up"></i>
                             <div class="badge">30</div>
                         </button>
@@ -98,6 +100,7 @@
                     <div id="social" class="row">
                         <hr>
                         <button type="button" class="btn btn-warning btn-circle btn-lg"><span class="fa fa-star" aria-hidden="true"></span></button>
+                        <a href="details2.html"><button type="button" class="btn btn-info btn-circle btn-lg"><i class="fa fa-comments"></i> <span class="badge">3</span></button></a>
                         <button type="button" class="btn btn-success btn-circle btn-lg"><i class="fa fa-thumbs-up"></i>
                             <div class="badge">30</div>
                         </button>
@@ -115,6 +118,7 @@
                     <div id="social" class="row">
                         <hr>
                         <button type="button" class="btn btn-warning btn-circle btn-lg"><span class="fa fa-star" aria-hidden="true"></span></button>
+                        <a href="details2.html"><button type="button" class="btn btn-info btn-circle btn-lg"><i class="fa fa-comments"></i> <span class="badge">3</span></button></a>
                         <button type="button" class="btn btn-success btn-circle btn-lg"><i class="fa fa-thumbs-up"></i>
                             <div class="badge">30</div>
                         </button>
@@ -132,6 +136,7 @@
                     <div id="social" class="row">
                         <hr>
                         <button type="button" class="btn btn-warning btn-circle btn-lg"><span class="fa fa-star" aria-hidden="true"></span></button>
+                        <a href="details2.html"><button type="button" class="btn btn-info btn-circle btn-lg"><i class="fa fa-comments"></i> <span class="badge">3</span></button></a>
                         <button type="button" class="btn btn-success btn-circle btn-lg"><i class="fa fa-thumbs-up"></i>
                             <div class="badge">30</div>
                         </button>
