--- a/pepe.html
+++ b/pepe.html
@@ -63,6 +63,8 @@
                     <div id="social" class="row">
                         <hr>
                         <button type="button" class="btn btn-warning btn-circle btn-lg"><span class="fa fa-star" aria-hidden="true"></span></button>
+                        <a href="details2.html"><button type="button" class="btn btn-info btn-circle btn-lg"><i class="fa fa-comments"></i> <span class="badge">3</span>
+                        </button></a>
                         <button type="button" class="btn btn-success btn-circle btn-lg"><i class="fa fa-thumbs-up"></i>
                             <div class="badge">30</div>
                         </button>
@@ -81,6 +83,8 @@
                     <div id="social" class="row">
                         <hr>
                         <button type="button" class="btn btn-warning btn-circle btn-lg"><span class="fa fa-star" aria-hidden="true"></span></button>
+                        <a href="details2.html"><button type="button" class="btn btn-info btn-circle btn-lg"><i class="fa fa-comments"></i> <span class="badge">3</span>
+                        </button></a>
                         <button type="button" class="btn btn-success btn-circle btn-lg"><i class="fa fa-thumbs-up"></i>
                             <div class="badge">30</div>
                         </button>
@@ -98,6 +102,8 @@
                     <div id="social" class="row">
                         <hr>
                         <button type="button" class="btn btn-warning btn-circle btn-lg"><span class="fa fa-star" aria-hidden="true"></span></button>
+                        <a href="details2.html"><button type="button" class="btn btn-info btn-circle btn-lg"><i class="fa fa-comments"></i> <span class="badge">3</span>
+                        </button></a>
                         <button type="button" class="btn btn-success btn-circle btn-lg"><i class="fa fa-thumbs-up"></i>
                             <div class="badge">30</div>
                         </button>
@@ -115,6 +121,8 @@
                     <div id="social" class="row">
                         <hr>
                         <button type="button" class="btn btn-warning btn-circle btn-lg"><span class="fa fa-star" aria-hidden="true"></span></button>
+                        <a href="details2.html"><button type="button" class="btn btn-info btn-circle btn-lg"><i class="fa fa-comments"></i> <span class="badge">3</span>
+                        </button></a>
                         <button type="button" class="btn btn-success btn-circle btn-lg"><i class="fa fa-thumbs-up"></i>
                             <div class="badge">30</div>
                         </button>
@@ -132,6 +140,8 @@
                     <div id="social" class="row">
                         <hr>
                         <button type="button" class="btn btn-warning btn-circle btn-lg"><span class="fa fa-star" aria-hidden="true"></span></button>
+                        <a href="details2.html"><button type="button" class="btn btn-info btn-circle btn-lg"><i class="fa fa-comments"></i> <span class="badge">3</span>
+                        </button></a>
                         <button type="button" class="btn btn-success btn-circle btn-lg"><i class="fa fa-thumbs-up"></i>
                             <div class="badge">30</div>
                         </button>
